bluec-tests/tests/valid/decl_var/multiple_declarators_2.c
int main(void) {
    int a, b, c;
    a = 10;
    b = 1;
    c = 2;
    return a + b + c;
}