bluec-tests/tests/invalid/types_longlong/invalid_suffix.c
int main(void) {
    return 0lLL;
}